Style sheet linked

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Cpmpatible" content="edge">   
     <title><Dasmoto-activity></Dasmoto-activity></title>
-    <link href="/Assets/CSS/stylesheet" rel="stylesheet" >  
+    <link rel="stylesheet" href="./Assets/CSS/style.css">
   </head>
     <header>
     <div class="main-title">
@@ -14,20 +15,22 @@
 </header>
   <body>  
     <div>
-        <h3 class="Brushes">Brushes</h3>
-        
-         <h6 class="sub-title">Hacksaw Brushes</h6>
+        <h3 class="Brushes">Brushes</h3> 
+        <img src="./Assets/CSS/Images/hacksaw.jpeg" alt="Hacksaw Brushes jpeg">
+        <h6 class="sub-title">Hacksaw Brushes</h6>
             <p> Made of the highes quality oak, Hacksaw brushes are known for thier ieght and ability to hold paint. Avaialble in different sizes. 
-              <span> Starting at $3.00/brush.</span>></p>
+                <span> Starting at $3.00/brush.</span>></p>
     </div>
 
     <div>
         <h3 class="Frames">Frames</h3>
+        <img src="./Assets/CSS/Images/frames.jpeg" alt="Assorted Frames jpeg">
         <h6 class="sub-title">Art Frames (assorted)</h6>
         <p >Assorted frames made of different matierial, incuding MDF, birchwood, and PDE. Select frames can e sanded and painted accorinding to your needs.<span>Starting $2.00.frame.</span></p>
     </div>
     <div>
         <h3 class="Paint">Paint</h3>
+        <img src="./Assets/CSS/Images/finnish.jpeg" alt="Tubes of paint jpg">
         <h6 class="sub-title">Clean Finnish Paint</h6>
         <p >Imported paint from Finland. Over 250 colors available in store, varying in quntity (1oz. to 8 oz.) Finish paint microbinds to canvas, increasing the finish and logevity of the artwork<span>Stating at $5.00/tube</span></p>
     </div>
