--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
     <div class="main-title">
         <h1>Dasmoto's Arts $ Craft</h1>
-        <img src="/Assets/css/images/pattern.jpg" alt="Pattern.jpg"/>
+        <img src=(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/hacksaw.jpeg);
     </div>
 </header>
   <body>  
